--- a/Python_Problem/Tweets Parser.ipynb
+++ b/Python_Problem/Tweets Parser.ipynb
@@ -4,22 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twitter, tweets parser\n",
-    "\n"
+    "# Twitter tweets parser - MIDAS Intership Challenge\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explanation \n",
+    "## Explanation - 1\n",
     "The code in the block below, is added to import 3rd party libaries like **requests** and **pandas** which are very handy and ease out the development process, as well as we use the code block below to import in-built Python libraries like \n",
     "**os** and **json**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,35 +29,83 @@
     "import oauth2\n",
     "from requests.auth import HTTPBasicAuth\n",
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import uuid"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Explanation - 2\n",
+    "### Intuition\n",
+    "The intutition of the code block below is to create a new **Data Type** to solve the problem we have with ease, we can consider the class `MidasTweetParser` as a new **Data Type**, and the methods defined as the state of that data type.\n",
+    "    \n",
+    "We have used the instance variable *self.tabular_data* as a Pandas Data frame so that we can easily show the data in tabular form as easily possible, with minimum extra code.\n",
+    "\n",
+    "We have stored our API keys as environment variable so that they are safe.\n",
+    "To keep the code more clean and readable we have created an exception class, `TwitterAPIException`, so to handle the case when any of the Twitter APIs fail.\n",
+    "\n",
+    "\n",
+    "### What is the code block doing\n",
+    "The code block below, incorporates the logic of what needs to be done as far this problem of parsing tweets, dumping them in JSON files, as well populating the data frame to show them later in tabular form.\n",
+    "\n",
+    "As well as we are taking care of cases when our request to Twitter APIs fail, because of any of the reason."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TwitterAPIException(Exception):\n",
+    "    \"\"\"\n",
+    "     An exception to handle the case when Twitter's APIs fail.\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MidasTweetParser:\n",
     "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "         This is a constructor for the class, the intuition behind the class it to keep the code, clean\n",
+    "         Pandas Dataframe is used so that we can easily show our tweets collection in tabular form.\n",
+    "        \"\"\"\n",
     "        self.consumer_key = os.environ[\"TWITTER_ACCESS_TOKEN\"]\n",
     "        self.consumer_secret = os.environ[\"TWITTER_ACCESS_TOKEN_SECRET\"]\n",
+    "        self.tweets_dir = \"Midas_Tweets\"\n",
     "        self.request_token_url = \"https://api.twitter.com/oauth2/token?grant_type=client_credentials\"\n",
     "        self.tweets_url = \"https://api.twitter.com/1.1/statuses/user_timeline.json\"\n",
     "        self.tweets_url_params = {\"screen_name\":\"midasiiitd\", \"page\": 1}\n",
     "        self.tabular_data = pd.DataFrame()\n",
     "    \n",
     "    def _get_bearer_token(self):\n",
+    "        \"\"\" \n",
+    "         Method to complete the OAuth flow, to get bearer token for the following requests.\n",
+    "        \"\"\"\n",
     "        response = requests.post(self.request_token_url, auth=HTTPBasicAuth(self.consumer_key, self.consumer_secret))\n",
+    "        if response.status_code != 200:\n",
+    "            raise TwitterAPIException(\"{0}, error code: {1}\".format(\"Could not fetch Bearer token from Twitter\", response.status_code))\n",
     "        response_data = json.loads(response.content.decode())\n",
     "        return response_data[\"access_token\"]\n",
     "    \n",
     "    def _handle_tweets(self, tweets):\n",
+    "        \"\"\"\n",
+    "          The code works to get tweets in batches of 20, to save memory.\n",
+    "          This method handles each batch;\n",
+    "          \n",
+    "          1. Parse each tweet object, to get the required fields.\n",
+    "          2. Dump each tweet object into a separate JSON file.\n",
+    "          3. Add build a pandas data frame to show the collection of tweets in a tabular form.\n",
+    "        \"\"\"\n",
+    "        print(\"Handling {0} tweets from page: {1}\".format(len(tweets), self.tweets_url_params[\"page\"]))\n",
     "        for tweet in tweets:\n",
     "            date_time = tweet.get(\"created_at\")\n",
     "            text = tweet.get(\"text\")\n",
@@ -77,35 +124,107 @@
     "                \"Text\":text,\n",
     "            }\n",
     "            self.tabular_data = self.tabular_data.append(data_frame_row, ignore_index=True)\n",
-    "    \n",
+    "            self._dump_tweet(tweet)\n",
+    "            \n",
+    "    def _dump_tweet(self, tweet):\n",
+    "        \"\"\"\n",
+    "         Method to dump tweets into a single file\n",
+    "        \"\"\"\n",
+    "        if not os.path.exists(self.tweets_dir):\n",
+    "            os.mkdir(self.tweets_dir)\n",
+    "            \n",
+    "        tweet_id = tweet.get(\"id\", uuid.uuid4())\n",
+    "        path = \"{0}/{1}.json\".format(self.tweets_dir, tweet_id)\n",
+    "        with open(path, 'w') as outfile:\n",
+    "            json.dump(tweet, outfile)\n",
     "        \n",
     "    def _build_bearer_token(self, token):\n",
+    "        \"\"\"\n",
+    "         This code block is used to build the format for the access token that Twitter accepts.\n",
+    "         eg: Bearer AADKJKJDKF.....090KKKM09232M\n",
+    "        \"\"\"\n",
     "        return \"{0} {1}\".format(\"Bearer\", token)\n",
     "    \n",
     "    def _show_tabular_data(self):\n",
     "        return self.tabular_data\n",
     "    \n",
+    "    def _get_total_number_tweets(self):\n",
+    "        return self.tabular_data.shape[0]\n",
+    "    \n",
     "    def _get_json_for_tweets(self):\n",
+    "        \"\"\"\n",
+    "         1. This method is useful as it uses the bearer token received via Twitter's OAith APIs to fetch tweets,\n",
+    "            for the required twitter handle, 'midasiiitd' for this code problem, in batches of 20.\n",
+    "            \n",
+    "         2. The method also returns the response of the Twitter API as a Python dictionary.\n",
+    "        \"\"\"\n",
     "        bearer_token = self._get_bearer_token()\n",
     "        authorization_header = self._build_bearer_token(bearer_token)\n",
     "        response = requests.get(self.tweets_url,\n",
     "                                headers={\"Authorization\":authorization_header}, params=self.tweets_url_params)\n",
+    "        if response.status_code != 200:\n",
+    "            raise TwitterAPIException(\"{0}, error code: {1}\".format(\"Could not fetch tweets from Twitter\", response.status_code))\n",
     "        return json.loads(response.content)\n",
     "    \n",
-    "    def call(self):\n",
+    "    def run(self):\n",
+    "        print(\"Starting parser........\")\n",
     "        tweets_data = self._get_json_for_tweets()\n",
     "        while tweets_data:\n",
     "            self._handle_tweets(tweets_data)\n",
     "            self.tweets_url_params[\"page\"] += 1\n",
     "            tweets_data = self._get_json_for_tweets()\n",
+    "        \n",
+    "        print(\"\\nSuccessfully, populated the table as well as dumped the JSON for each in folder /{0} \\n\".format(self.tweets_dir))\n",
+    "        print(\"-----------------\\nPrinting the tabular data\\n-----------------\")\n",
+    "        total_tweets = self._get_total_number_tweets()\n",
+    "        print(\"Total number of tweets made by 'midasiiitd', are: {0}\".format(total_tweets))\n",
     "        return self._show_tabular_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise the object\n",
+    "tweets_parser = MidasTweetParser() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting parser........\n",
+      "Handling 20 tweets from page: 1\n",
+      "Handling 20 tweets from page: 2\n",
+      "Handling 20 tweets from page: 3\n",
+      "Handling 20 tweets from page: 4\n",
+      "Handling 20 tweets from page: 5\n",
+      "Handling 20 tweets from page: 6\n",
+      "Handling 20 tweets from page: 7\n",
+      "Handling 20 tweets from page: 8\n",
+      "Handling 20 tweets from page: 9\n",
+      "Handling 20 tweets from page: 10\n",
+      "Handling 20 tweets from page: 11\n",
+      "Handling 20 tweets from page: 12\n",
+      "Handling 20 tweets from page: 13\n",
+      "Handling 20 tweets from page: 14\n",
+      "Handling 14 tweets from page: 15\n",
+      "\n",
+      "Successfully, populated the table as well as dumped the JSON for each in folder /Midas_Tweets \n",
+      "\n",
+      "-----------------\n",
+      "Printing the tabular data\n",
+      "-----------------\n",
+      "Total number of tweets made by 'midasiiitd', are: 294\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -821,54 +940,25 @@
        "[294 rows x 5 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj = MidasTweetParser()\n",
-    "obj.call()"
+    "# Run the parser\n",
+    "tweets_parser.run()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2005, 6, 1, 13, 33)"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion\n",
+    "As we can see by using a single class we have successfully created a parser which fetches tweets from Twitter, populates them in a tabular form as well as dumps each tweet in a separate file.\n",
+    "\n",
+    "**By - Akshay Sharma, email: akshay.sharma09695@gmail.com**"
+   ]
   }
  ],
  "metadata": {
